--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
